apps/base/comfy-control/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: comfy-control
  labels:
    app.kubernetes.io/name: comfy-control
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
