apps/base/comfy-control/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: comfy-control
  namespace: comfy-control
  labels:
    app.kubernetes.io/name: comfy-control
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bifrost
          podSelector:
            matchLabels:
              app.kubernetes.io/name: bifrost
      ports:
        - port: 8000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: comfy-control
  policyTypes:
    - Ingress
