apps/base/comfy-control/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: comfy-control
  labels:
    app.kubernetes.io/name: comfy-control
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: comfy-control
  namespace: comfy-control
  labels:
    app.kubernetes.io/name: comfy-control
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bifrost
          podSelector:
            matchLabels:
              app.kubernetes.io/name: bifrost
      ports:
        - port: 8000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: comfy-control
  policyTypes:
    - Ingress
